--- a/config/sync/core.entity_form_display.node.cachoeira.default.yml
+++ b/config/sync/core.entity_form_display.node.cachoeira.default.yml
@@ -4,7 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.node.cachoeira.body
+    - field.field.node.cachoeira.field_cidade
     - field.field.node.cachoeira.field_fotos
+    - field.field.node.cachoeira.field_p
     - field.field.node.cachoeira.field_video_da_cachoeira
     - image.style.thumbnail
     - node.type.cachoeira
@@ -20,7 +22,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 121
+    weight: 3
     settings:
       rows: 9
       summary_rows: 3
@@ -30,28 +32,40 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_cidade:
+    weight: 1
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_fotos:
-    weight: 122
+    weight: 4
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
     third_party_settings: {  }
     type: image_image
     region: content
+  field_p:
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_video_da_cachoeira:
     type: media_library_widget
-    weight: 123
+    weight: 5
     settings:
       media_types: {  }
     third_party_settings: {  }
     region: content
   path:
     type: path
-    weight: 30
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -59,26 +73,26 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 8
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 120
+    weight: 11
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 9
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -86,7 +100,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 6
     settings:
       match_operator: CONTAINS
       size: 60
