--- a/config/sync/core.entity_view_display.node.cachoeira.default.yml
+++ b/config/sync/core.entity_view_display.node.cachoeira.default.yml
@@ -4,7 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.node.cachoeira.body
+    - field.field.node.cachoeira.field_cidade
     - field.field.node.cachoeira.field_fotos
+    - field.field.node.cachoeira.field_p
     - field.field.node.cachoeira.field_video_da_cachoeira
     - node.type.cachoeira
   module:
@@ -19,12 +21,20 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 101
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     region: content
+  field_cidade:
+    weight: 2
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_fotos:
-    weight: 102
+    weight: 4
     label: hidden
     settings:
       image_style: ''
@@ -32,9 +42,17 @@ content:
     third_party_settings: {  }
     type: image
     region: content
+  field_p:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_video_da_cachoeira:
     type: entity_reference_entity_view
-    weight: 103
+    weight: 5
     label: hidden
     settings:
       view_mode: default
@@ -42,7 +60,7 @@ content:
     third_party_settings: {  }
     region: content
   links:
-    weight: 100
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
