--- a/config/sync/core.entity_view_display.node.parque_de_diversao.default.yml
+++ b/config/sync/core.entity_view_display.node.parque_de_diversao.default.yml
@@ -4,7 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.node.parque_de_diversao.body
+    - field.field.node.parque_de_diversao.field_cidadeparque
     - field.field.node.parque_de_diversao.field_fotosparque
+    - field.field.node.parque_de_diversao.field_paisparque
     - field.field.node.parque_de_diversao.field_video_do_parque
     - node.type.parque_de_diversao
   module:
@@ -19,31 +21,47 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 101
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     region: content
-  field_fotosparque:
-    weight: 102
+  field_cidadeparque:
+    weight: 2
     label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_fotosparque:
+    weight: 4
+    label: hidden
     settings:
       image_style: ''
       image_link: ''
     third_party_settings: {  }
     type: image
     region: content
+  field_paisparque:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_video_do_parque:
     type: entity_reference_entity_view
-    weight: 103
-    label: above
+    weight: 5
+    label: hidden
     settings:
       view_mode: default
       link: false
     third_party_settings: {  }
     region: content
   links:
-    weight: 100
+    weight: 0
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden: {  }
