--- a/config/sync/views.view.listagem_das_cachoeiras.yml
+++ b/config/sync/views.view.listagem_das_cachoeiras.yml
@@ -6,8 +6,10 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - node.type.cachoeira
     - system.menu.main
+    - taxonomy.vocabulary.paises
   module:
     - node
+    - taxonomy
     - user
 id: listagem_das_cachoeiras
 label: 'Listagem das Cachoeiras'
@@ -146,6 +148,53 @@ display:
           expose:
             operator_limit_selection: false
             operator_list: {  }
+        field_paisparque_target_id:
+          id: field_paisparque_target_id
+          table: node__field_paisparque
+          field: field_paisparque_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_paisparque_target_id_op
+            label: 'Filtro por País '
+            description: ''
+            use_operator: false
+            operator: field_paisparque_target_id_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: field_paisparque_target_id
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: select
+          limit: true
+          vid: paises
+          hierarchy: false
+          error_message: true
+          plugin_id: taxonomy_index_tid
       sorts:
         created:
           id: created
@@ -174,7 +223,9 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
+        - user
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
@@ -200,7 +251,9 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
+        - user
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
