feat: added json views

--- a/config/sync/views.view.listagem_das_cachoeiras.yml
+++ b/config/sync/views.view.listagem_das_cachoeiras.yml
@@ -262,6 +262,8 @@ display:
         style: false
         row: false
         fields: false
+        filters: false
+        filter_groups: false
       block_description: 'Bloco cachoeira'
       style:
         type: html_list
@@ -450,13 +452,41 @@ display:
             tags: '0'
           entity_type: node
           plugin_id: taxonomy_index_tid
+      filters:
+        status:
+          value: '1'
+          table: node_field_data
+          field: status
+          plugin_id: boolean
+          entity_type: node
+          entity_field: status
+          id: status
+          expose:
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+          group: 1
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          value:
+            cachoeira: cachoeira
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+          expose:
+            operator_limit_selection: false
+            operator_list: {  }
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url
-        - user
         - 'user.node_grants:view'
         - user.permissions
       tags:
@@ -484,6 +514,8 @@ display:
         style: false
         row: false
         fields: false
+        filters: false
+        filter_groups: false
       style:
         type: default
         options:
@@ -496,6 +528,83 @@ display:
           relationship: none
           view_mode: teaser
       fields: {  }
+      filters:
+        status:
+          value: '1'
+          table: node_field_data
+          field: status
+          plugin_id: boolean
+          entity_type: node
+          entity_field: status
+          id: status
+          expose:
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+          group: 1
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          value:
+            cachoeira: cachoeira
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+          expose:
+            operator_limit_selection: false
+            operator_list: {  }
+        field_p_target_id:
+          id: field_p_target_id
+          table: node__field_p
+          field: field_p_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_p_target_id_op
+            label: 'Filtro por País'
+            description: ''
+            use_operator: false
+            operator: field_p_target_id_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: field_p_target_id
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: select
+          limit: true
+          vid: paises
+          hierarchy: false
+          error_message: true
+          plugin_id: taxonomy_index_tid
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: -1
       contexts:
