--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "drupal/core-composer-scaffold": "^9.2",
     "drupal/core-project-message": "^9.2",
     "drupal/core-recommended": "^9.2",
+    "drupal/corporate_lite": "^1.2",
     "drupal/ctools": "^3.7",
     "drupal/devel": "^4.1",
     "drupal/pathauto": "^1.8",
