--- a/config/sync/block.block.corporate_lite_search.yml
+++ b/config/sync/block.block.corporate_lite_search.yml
@@ -10,13 +10,13 @@ _core:
   default_config_hash: adkpHYI8S4q54KIjLukOXC4ApP50wuGyPzzQFP0oDnY
 id: corporate_lite_search
 theme: corporate_lite
-region: sidebar_first
-weight: -1
+region: header
+weight: -7
 provider: null
 plugin: search_form_block
 settings:
   id: search_form_block
-  label: Search
+  label: Pesquisar
   provider: search
   label_display: visible
   page_id: ''
