--- a/config/sync/block.block.views_block__listagem_dos_parques_block_1_2.yml
+++ b/config/sync/block.block.views_block__listagem_dos_parques_block_1_2.yml
@@ -5,13 +5,14 @@ dependencies:
   config:
     - views.view.listagem_dos_parques
   module:
+    - system
     - views
   theme:
     - corporate_lite
 id: views_block__listagem_dos_parques_block_1_2
 theme: corporate_lite
-region: sidebar_second
-weight: 0
+region: sidebar_first
+weight: -6
 provider: null
 plugin: 'views_block:listagem_dos_parques-block_1'
 settings:
@@ -21,4 +22,8 @@ settings:
   label_display: visible
   views_label: ''
   items_per_page: none
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: '<front>'
+    negate: false
