--- a/config/sync/core.entity_view_display.node.cachoeira.default.yml
+++ b/config/sync/core.entity_view_display.node.cachoeira.default.yml
@@ -53,7 +53,7 @@ content:
   field_video_da_cachoeira:
     type: entity_reference_entity_view
     weight: 5
-    label: hidden
+    label: above
     settings:
       view_mode: default
       link: false
