--- a/config/sync/core.entity_view_display.node.page.full.yml
+++ b/config/sync/core.entity_view_display.node.page.full.yml
@@ -1,8 +1,9 @@
-uuid: b3e7f4d6-88e7-41ce-99bc-42073c0d0d7f
+uuid: 24b5695d-f894-4cbb-86f6-d44366311c91
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.full
     - field.field.node.page.body
     - node.type.page
   module:
@@ -10,17 +11,19 @@ dependencies:
     - user
 _core:
   default_config_hash: g1S3_GLaxq4l3I9RIca5Mlz02MxI2KmOquZpHw59akM
-id: node.page.default
+id: node.page.full
 targetEntityType: node
 bundle: page
-mode: default
+mode: full
 content:
   body:
     label: hidden
     type: text_default
-    weight: 0
+    weight: 100
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden:
-  links: true
+  links:
+    weight: 101
+    region: content
+hidden: {  }
