--- a/config/sync/views.view.cachoeiras_json.yml
+++ b/config/sync/views.view.cachoeiras_json.yml
@@ -208,9 +208,8 @@ display:
       display_extenders: {  }
       path: rest/views/cachoeiras
       pager:
-        type: some
+        type: none
         options:
-          items_per_page: 10
           offset: 0
       style:
         type: serializer
